# nfcorpus-retrieval-agent

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
docs/: purple_agent_spec.md
docs/examples/: request.json  response.json
src/: agent.py  server.py
tests/: test_agent.py
